# lebowski

./: .gitignore  .pylintrc  Dockerfile  cleanup-docker.sh  environment.yml  mypy.ini  pyproject.toml  run-local.py  test.py
.stubs/: uwsgidecorators.pyi
container-data/: nginx.conf  stop-supervisor.sh  supervisord.ini  uwsgi.ini
endpoint/: __init__.py  app_typing.py  constants.py  main.py  shared.py  utils.py  uwsgi.py
endpoint/routes/: __init__.py  cache.py  model.py
tests/: test_endpoint.py
