[tool.poetry]
name = "endpoint"
version = "0.1.0"
description = ""
authors = ["Andrew Udvare <audvare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
transformers = "^4.21.2"
uWSGI = "^2.0.20"
torch = "^1.12.1"
sentencepiece = "^0.1.97"
protobuf = "^4.21.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint-quotes = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
